--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -773,6 +773,72 @@ footer {
             color: #606060; }
           .create-page .create-section .create-box .top .btn:hover i {
             color: black; }
+      .create-page .create-section .create-box .timeline {
+        height: 64px;
+        width: 100%;
+        position: fixed;
+        background-color: white;
+        z-index: 99;
+        padding-top: 8px;
+        padding-bottom: 8px; }
+        .create-page .create-section .create-box .timeline .lines {
+          width: 100%;
+          height: 1px; }
+          .create-page .create-section .create-box .timeline .lines .line {
+            position: relative;
+            z-index: -1; }
+            .create-page .create-section .create-box .timeline .lines .line::before {
+              content: "";
+              position: absolute;
+              width: 8px;
+              height: 8px;
+              top: 32.5px;
+              left: 0%;
+              border-radius: 50%;
+              border: 4px solid #ccc;
+              background-color: #fff;
+              z-index: 1; }
+            .create-page .create-section .create-box .timeline .lines .line::after {
+              content: "";
+              position: absolute;
+              left: 120px;
+              top: 40.5px;
+              background-color: #909090;
+              width: 75%;
+              height: 1px; }
+            .create-page .create-section .create-box .timeline .lines .line:not(:first-child)::after {
+              content: none; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(1)::before {
+              left: 11.2%; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(2)::before {
+              left: 36.5%; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(3)::before {
+              left: 61.8%; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(4)::before {
+              left: 87.1%; }
+            .create-page .create-section .create-box .timeline .lines .line.active::before {
+              width: 12px;
+              height: 12px;
+              top: 30px;
+              border-color: #065fd4; }
+        .create-page .create-section .create-box .timeline a {
+          text-align: center;
+          display: inline-block;
+          width: 128px;
+          height: 18px;
+          padding-top: 7px;
+          padding-bottom: 39px;
+          font-size: 13.5px;
+          text-decoration: none;
+          color: #909090;
+          border-radius: 4px;
+          margin-left: 54.5px;
+          margin-right: 54.5px;
+          font-weight: bold; }
+          .create-page .create-section .create-box .timeline a:hover {
+            background-color: rgba(6, 95, 212, 0.2); }
+          .create-page .create-section .create-box .timeline a.active {
+            color: #065fd4; }
       .create-page .create-section .create-box .mid {
         text-align: center;
         position: relative;
@@ -829,71 +895,6 @@ footer {
           margin-right: 40px;
           overflow-y: scroll;
           overflow-x: hidden; }
-          .create-page .create-section .create-box .mid #details-stage .timeline {
-            height: 64px;
-            width: 880px;
-            position: fixed;
-            background-color: white;
-            z-index: 99;
-            padding-top: 8px;
-            padding-bottom: 8px; }
-            .create-page .create-section .create-box .mid #details-stage .timeline .lines {
-              width: 100%;
-              height: 1px; }
-              .create-page .create-section .create-box .mid #details-stage .timeline .lines .line {
-                position: relative;
-                z-index: -1; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line::before {
-                  content: "";
-                  position: absolute;
-                  width: 8px;
-                  height: 8px;
-                  top: 32.5px;
-                  left: 0%;
-                  border-radius: 50%;
-                  border: 4px solid #ccc;
-                  background-color: #fff;
-                  z-index: 1; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line::after {
-                  content: "";
-                  position: absolute;
-                  left: 12%;
-                  top: 40.5px;
-                  background-color: #909090;
-                  width: 75%;
-                  height: 1px; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line:not(:first-child)::after {
-                  content: none; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line:nth-child(1)::before {
-                  left: 12%; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line:nth-child(2)::before {
-                  left: 37%; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line:nth-child(3)::before {
-                  left: 61.5%; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line:nth-child(4)::before {
-                  left: 86%; }
-                .create-page .create-section .create-box .mid #details-stage .timeline .lines .line.active::before {
-                  width: 12px;
-                  height: 12px;
-                  top: 30px;
-                  border-color: #065fd4; }
-            .create-page .create-section .create-box .mid #details-stage .timeline a {
-              text-align: center;
-              display: inline-block;
-              width: 128px;
-              height: 18px;
-              padding-top: 7px;
-              padding-bottom: 39px;
-              font-size: 13.5px;
-              color: #909090;
-              border-radius: 4px;
-              margin-left: 42px;
-              margin-right: 42px;
-              font-weight: bold; }
-              .create-page .create-section .create-box .mid #details-stage .timeline a:hover {
-                background-color: rgba(6, 95, 212, 0.2); }
-              .create-page .create-section .create-box .mid #details-stage .timeline a.active {
-                color: #065fd4; }
           .create-page .create-section .create-box .mid #details-stage .details {
             height: 718px;
             width: 100%;
