--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -41,6 +41,103 @@
                     }
                 }
             }
+            .timeline {
+                height: 64px;
+                width: 100%;
+                position: fixed;
+                background-color: white;
+                z-index: 99;
+                padding-top: 8px;
+                padding-bottom: 8px;
+
+                .lines {
+                    width: 100%;
+                    height: 1px;
+                    
+                    .line {
+                        position: relative;
+                        z-index: -1;
+                        
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            width: 8px;
+                            height: 8px;
+                            top: 32.5px;
+                            left: 0%;
+                            border-radius: 50%;
+                            border: 4px solid $timeline-disabled-circle-color;
+                            background-color: #fff;
+                            z-index: 1;
+                        }
+                        &::after {
+                            content: "";
+                            position: absolute;
+                            left: 120px;
+                            top: 40.5px;
+                            background-color: $disabled-font-color;
+                            width: 75%;
+                            height: 1px;
+                        }
+                        &:not(:first-child) {
+                            &::after {
+                                content: none;
+                            }
+                        }
+
+                        &:nth-child(1) {
+                            &::before {
+                                left: 11.2%;
+                            }
+                        }
+                        &:nth-child(2) {
+                            &::before {
+                                left: 36.5%;
+                            }
+                        }
+                        &:nth-child(3) {
+                            &::before {
+                                left: 61.8%;
+                            }
+                        }
+                        &:nth-child(4) {
+                            &::before {
+                                left: 87.1%;
+                            }
+                        }
+                        &.active {
+                            &::before {
+                                width: 12px;
+                                height: 12px;
+                                top: 30px;
+                                border-color: $sign-main-color;
+                            }
+                        }
+                    }
+                }
+                a {
+                    text-align: center;
+                    display: inline-block;
+                    width: 128px;
+                    height: 18px;
+                    padding-top: 7px;
+                    padding-bottom: 39px;
+                    font-size: 13.5px;
+                    text-decoration: none;
+                    color: $disabled-font-color;
+                    border-radius: 4px;
+                    margin-left: 54.5px;
+                    margin-right: 54.5px;
+                    font-weight: bold;
+
+                    &:hover {
+                        background-color: $timeline-hover-background-color;
+                    }
+                    &.active {
+                        color: $sign-main-color;
+                    }
+                }
+            }
             .mid {
                 text-align: center;
                 position: relative;
@@ -112,102 +209,6 @@
                     overflow-y: scroll;
                     overflow-x: hidden;
 
-                    .timeline {
-                        height: 64px;
-                        width: 880px;
-                        position: fixed;
-                        background-color: white;
-                        z-index: 99;
-                        padding-top: 8px;
-                        padding-bottom: 8px;
-
-                        .lines {
-                            width: 100%;
-                            height: 1px;
-                            
-                            .line {
-                                position: relative;
-                                z-index: -1;
-                                
-                                &::before {
-                                    content: "";
-                                    position: absolute;
-                                    width: 8px;
-                                    height: 8px;
-                                    top: 32.5px;
-                                    left: 0%;
-                                    border-radius: 50%;
-                                    border: 4px solid $timeline-disabled-circle-color;
-                                    background-color: #fff;
-                                    z-index: 1;
-                                }
-                                &::after {
-                                    content: "";
-                                    position: absolute;
-                                    left: 12%;
-                                    top: 40.5px;
-                                    background-color: $disabled-font-color;
-                                    width: 75%;
-                                    height: 1px;
-                                }
-                                &:not(:first-child) {
-                                    &::after {
-                                        content: none;
-                                    }
-                                }
-
-                                &:nth-child(1) {
-                                    &::before {
-                                        left: 12%;
-                                    }
-                                }
-                                &:nth-child(2) {
-                                    &::before {
-                                        left: 37%;
-                                    }
-                                }
-                                &:nth-child(3) {
-                                    &::before {
-                                        left: 61.5%;
-                                    }
-                                }
-                                &:nth-child(4) {
-                                    &::before {
-                                        left: 86%;
-                                    }
-                                }
-                                &.active {
-                                    &::before {
-                                        width: 12px;
-                                        height: 12px;
-                                        top: 30px;
-                                        border-color: $sign-main-color;
-                                    }
-                                }
-                            }
-                        }
-                        a {
-                            text-align: center;
-                            display: inline-block;
-                            width: 128px;
-                            height: 18px;
-                            padding-top: 7px;
-                            padding-bottom: 39px;
-                            font-size: 13.5px;
-                            color: $disabled-font-color;
-                            border-radius: 4px;
-                            margin-left: 42px;
-                            margin-right: 42px;
-                            font-weight: bold;
-
-                            &:hover {
-                                background-color: $timeline-hover-background-color;
-                            }
-                            &.active {
-                                color: $sign-main-color;
-                            }
-                        }
-                    }
                     .details {
                         height: 718px;
                         width: 100%;
